src/plannet 改为 src/script 应该是脚本支持，而不仅仅是支持星球的运转

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,7 +13,7 @@ travellerobjects = ./core/traveller.o \
 				   ./netcmd/netcmd.o \
 				   ./netcmd/test.o \
 				   ./netcmd/planet.o \
-				   ./planet/planet.o \
+				   ./script/planet.o \
 				   ./planet/db.o \
 				   ./planet/net.o \
 				   ./ui/ui.o \
