清理概念：core/traveller 更改STInitPlanet 为 STInit， 将ui/citizen 移动到 script/citizen

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,8 @@ travellerobjects = ./core/traveller.o \
 				   ./netcmd/netcmd.o \
 				   ./netcmd/test.o \
 				   ./netcmd/planet.o \
+				   ./script/script.o \
+				   ./script/citizen.o \
 				   ./script/planet.o \
 				   ./script/db.o \
 				   ./script/net.o \
