ui 不使用 stdscr，增加稳定性

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,7 +30,7 @@ ALL_INCS= -I ./ \
 		  -I ../deps/sqlite/ 
 
 STD=-g -Wall
-LIBRARY=-lncurses ../deps/lua/src/liblua.a 
+LIBRARY= /usr/local/lib/libncurses.a ../deps/lua/src/liblua.a 
 CFLAGS=$(STD)
 CC:=gcc
 #CC:=$(shell sh -c 'type $(CC) >/dev/null 2>/dev/null && echo $(CC) || echo gcc') $(CFLAGS)
