--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-travellerobjects = ./core/traveller.o \
+zeusobjects = ./core/zeus.o \
 				   ./core/zmalloc.o \
 				   ./core/config.o \
 				   ./core/sds.o \
@@ -34,18 +34,18 @@ LIBRARY= /usr/local/lib/libncurses.a ../deps/lua/src/liblua.a
 CFLAGS=$(STD)
 CC:=gcc
 #CC:=$(shell sh -c 'type $(CC) >/dev/null 2>/dev/null && echo $(CC) || echo gcc') $(CFLAGS)
-all:traveller
+all:zeus
 
-traveller:$(travellerobjects)
-	$(CC) -o traveller $(travellerobjects) $(LIBRARY)  $(CFLAGS)
+zeus:$(zeusobjects)
+	$(CC) -o zeus $(zeusobjects) $(LIBRARY)  $(CFLAGS)
 
 %.o: %.c 
 	$(CC) -static -c $(CFLAGS) $(ALL_INCS) $<  -o $*.o
 
 clean:
-	rm ./traveller
 	rm -f ./core/*.o ./core/*.a
 	rm -f ./net/*.o ./net/*.a
 	rm -f ./ui/*.o ./ui/*.a
 	rm -f ./netcmd/*.o ./netcmd/*.a
 	rm -f ./script/*.o ./script/*.a
+	rm ./zeus
