配置文件读取 添加注释功能

--- a/conf/gemini.conf
+++ b/conf/gemini.conf
@@ -3,6 +3,7 @@ dir = ./gemini.log
 
 [galaxies_server]
 relative_path =  gemini/server
+#星系资源地址，包括脚本、资源
 
 [galaxies_client]
 galaxies_server_host = 127.0.0.1
