--- a/conf/gemini.conf
+++ b/conf/gemini.conf
@@ -1,9 +1,8 @@
-[log]
-dir = ./gemini.log
+[zeus]
+log_dir = ./gemini.log
 
 [galaxies_server]
 #星系服务端设置
-
 relative_path =  gemini/server
 #星系资源地址，包括脚本、资源
 
@@ -11,7 +10,6 @@ relative_path =  gemini/server
 
 [galaxies_client]
 #客户端设置
-
 galaxies_server_host = 127.0.0.1
 galaxies_server_port = 1092
 relative_path        = gemini/client
