ui.c不直接处理window， 使用事件机制
* 去掉g_rootUIWindow
* window处理分为 console, map

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,8 +22,7 @@ travellerobjects = ./traveller.o \
 				   ./script/db.o \
 				   ./script/net.o \
 				   ./ui/ui.o \
-				   ./ui/window.o ./ui/color.o ./ui/map.o ./ui/console.o \
-				   ./spaceship/spaceship.o
+				   ./ui/window.o ./ui/color.o ./ui/map.o ./ui/console.o ./ui/page.o
 
 
 ALL_INCS= -I ./ \
