实现加载多个script，清理C中的业务逻辑并放入lua中

--- a/galaxies/gemini/gemini.conf
+++ b/galaxies/gemini/gemini.conf
@@ -1,18 +1,12 @@
 [traveller]
 log_dir = ./gemini.log
+listen_port = 1092
 
-[galaxies_server]
-#星系服务端设置
-relative_path =  gemini/server
-#星系资源地址，包括脚本、资源
+[script:server]
+basedir =  gemini/server
+is_subscribe_net = 1
 
-
-
-[galaxies_client]
-#客户端设置
+[script:client]
+basedir = gemini/client
 galaxies_server_host = 127.0.0.1
 galaxies_server_port = 1092
-relative_path        = gemini/client
-
-[net_server]
-port = 1092
