完成 从客户端 -> 服务端 -> 客户端 -> ui 的数据库传输pipeline

--- a/src/makefile
+++ b/src/makefile
@@ -5,7 +5,7 @@ baseobjects := ../deps/sqlite/sqlite3.o \
 				   ./core/sha1.o ./core/crc64.o \
 				   ./event/device.o ./event/actor.o \
 				   ./net/anet.o ./net/ae.o ./net/networking.o \
-				   ./script/script.o ./script/service.o ./script/util.o \
+				   ./script/script.o ./script/service.o ./script/util.o ./script/ui.o \
 				   ./script/db.o \
 				   ./script/net.o \
 
