添加 SelectorSectionAttribute 并 makefile 使用 -lpanel

--- a/src/makefile
+++ b/src/makefile
@@ -22,7 +22,7 @@ ALL_INCS= -I ./ \
 		  -I ../deps/sqlite/ 
 
 STD=-g -Wall
-LIBRARY= -lcurses /usr/local/lib/libpanel.a ../deps/lua/src/liblua.a 
+LIBRARY= -lcurses -lpanel ../deps/lua/src/liblua.a 
 CFLAGS=$(STD)
 CC:=gcc
 #CC:=$(shell sh -c 'type $(CC) >/dev/null 2>/dev/null && echo $(CC) || echo gcc') $(CFLAGS)
