标记网络协议为 Resp

--- a/src/makefile
+++ b/src/makefile
@@ -4,9 +4,10 @@ baseobjects := ../deps/sqlite/sqlite3.o \
 				   ./core/stack.o ./core/dict.o ./core/frozen.o ./core/debug.o \
 				   ./core/sha1.o ./core/crc64.o \
 				   ./event/device.o ./event/actor.o \
-				   ./net/anet.o ./net/ae.o ./net/networking.o \
 				   ./script/script.o ./script/util.o ./script/ui.o ./script/db.o ./script/net.o \
-				   ./service/service.o ./service/test.o ./service/script.o \
+				   ./net/anet.o ./net/ae.o \
+				   ./net/networking.o ./net/resp/resp.o\
+				   ./net/resp/service/service.o ./net/resp/service/test.o ./net/resp/service/script.o \
 				   ./ui/ui.o ./ui/window.o ./ui/color.o ./ui/map.o ./ui/console.o ./ui/page.o \
 				   ./ui/document/document.o ./ui/document/html.o ./ui/document/css.o ./ui/document/select.o
 
@@ -46,14 +47,6 @@ test_noui:build_nouitest
 	$(CC) -static -c $(CFLAGS) $(ALL_INCS) $<  -o $*.o
 
 clean:
-	rm -f ./*.o ./*.a
-	rm -f ./core/*.o
-	rm -f ./net/*.o
-	rm -f ./ui/*.o
-	rm -f ./ui/document/*.o
-	rm -f ./service/*.o
-	rm -f ./event/*.o
-	rm -f ./script/*.o
-	rm -f ./uitests/*.o
-	rm -f ./nouitests/*.o
+	find ./ -name "*.o" | xargs rm
+	find ./ -name "*.a" | xargs rm
 	rm -f ./traveller ./uitest ./nouitest
