部分遵守 结构体中成员 首字母大写为公开 小写为私有

--- a/src/makefile
+++ b/src/makefile
@@ -10,9 +10,10 @@ baseobjects := ../deps/sqlite/sqlite3.o \
 				   ./net/resp/service/service.o ./net/resp/service/test.o ./net/resp/service/script.o \
 				   ./ui/ui.o ./ui/window.o ./ui/color.o ./ui/map.o ./ui/console.o ./ui/page.o \
 				   ./ui/document/document.o ./ui/document/error.o ./ui/document/html.o ./ui/document/css.o \
-				   ./ui/document/select.o ./ui/document/style_computation.o ./ui/document/render.o \
-				   ./ui/document/render_div.o  ./ui/document/render_extra.o\
-				   ./ui/document/render_input.o ./ui/document/render_table.o\
+				   ./ui/document/select.o ./ui/document/style_computation.o \
+				   ./ui/document/layout.o ./ui/document/render.o \
+				   ./ui/document/render_div.o  ./ui/document/render_extra.o \
+				   ./ui/document/render_input.o ./ui/document/render_table.o \
 				   ./ui/document/render_text.o
 				  
 
